
ARI
------------------
 * Added a new ARI resource 'mailboxes' which allows the creation and
   modification of mailboxes managed by external MWI. Modules res_mwi_external
   and res_stasis_mailbox must be enabled to use this resource.

chan_pjsip
------------------
 * Path support has been added with the 'support_path' option in registration
   and aor sections.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 11 to Asterisk 12 --------------------
------------------------------------------------------------------------------

Overview
------------------

Asterisk 12 is a standard release of the Asterisk project. As such, the
focus of development for this release was on core architectural changes and
major new features. This includes:
 * A more flexible bridging core based on the Bridging API
 * A new internal message bus, Stasis
 * Major standardization and consistency improvements to AMI
 * Addition of the Asterisk RESTful Interface (ARI)
 * A new SIP channel driver, chan_pjsip
In addition, as the vast majority of bridging in Asterisk was migrated to the
Bridging API used by ConfBridge, major changes were made to most of the
interfaces in Asterisk. This includes not only AMI, but also CDRs and CEL.

Specifications have been written for the affected interfaces. These
specifications are available on the Asterisk wiki:
 * AMI - https://wiki.asterisk.org/wiki/x/dAFRAQ
 * CEL - https://wiki.asterisk.org/wiki/x/4ICLAQ
 * CDRs - https://wiki.asterisk.org/wiki/x/pwpRAQ

It is *highly* recommended that anyone migrating to Asterisk 12 read the
information regarding its release both in this file and in the accompanying
UPGRADE.txt file. More detailed information on the major changes can be found
on the Asterisk wiki at https://wiki.asterisk.org/wiki/x/0YCLAQ.


Build System
------------------
 * Added build option DISABLE_INLINE. This option can be used to work around a